fixed overlap issues

--- a/style.css
+++ b/style.css
@@ -278,7 +278,7 @@ select {
 
 @media only screen and (max-width: 430px) {
     .circlecont {
-        justify-content: flex-end;
+        justify-content: center;
         padding-left: 2vh;
     }
     .svg-cont {
@@ -289,7 +289,8 @@ select {
     .help {
         height: fit-content;
         position: relative;
-        width: 100vw;
+        width: 80vw;
+        height: auto;
         clip-path: circle(18px at 50% 4vh);
         font-size: 13px;
         top: -1vh;
@@ -305,6 +306,7 @@ select {
     .helptext {
         position: relative;
         top: -1vh;
+        line-height: 1.3em;
     }
     .big-container {
         position: relative;
@@ -322,7 +324,7 @@ select {
     .formwrapper {
         position: relative;
         top: -12vh;
-        z-index: 100;
+        z-index: 10;
     }
     .todolist {
         position: relative;
